css/main.css
/*FONTS*/
body {
  font-family: 'Inconsolata', sans-serif;
  font-weight: bold;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  font-family: 'Inconsolata', sans-serif;
  font-weight: bold;
}

/*MAIN PAGE*/
main {
  margin-top: 60px;
  padding-right: 20dx;
  padding-left: 20dx;
}

/*NAV BAR*/
@media (min-width: 1200px) {
    .navbar .container{
        max-width: 720px;
    }
}

.navbar-fixed-top {
  background-color: rgba(208,208,208,.8);

  -webkit-box-shadow: 0px 2px 12px -2px rgba(0,0,0,.08);
  -moz-box-shadow: 0px 2px 12px -2px rgba(0,0,0,.08);
  box-shadow: 0px 2px 12px -2px rgba(0,0,0,.08);
}

a.navbar-brand {
  color: black;  
}
a.navbar-brand:hover{
  color: rgb(0,255,255);  
}

.navbar-nav > li > a {
  color: black;  
}

.nav > li > a:hover, .nav > li > a:focus {
  color: rgb(0,255,255);  
  background-color: transparent;
}

.navbar-toggle .icon-bar {
  background-color: white;
}

/*CAROUSEL*/
.carousel-caption {
  left: 50px;
  text-align: left;
  color: black;
  text-shadow: none;
}

/*PROJECT GRID*/
#project-grid .col-sm-4 {
  text-align: center;
  margin-top: 10px;
  background-color: white;
}


/*PROJECT PAGES*/
.post-nav-buttons {
}
.left-button {
  text-align: right;
}
@media (max-width: 768px) {
  .post-nav-buttons {
    display: none;
  }
}

